# gemmapy

./: .buildinfo  .gitignore  README.md  README.rst  api.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  tox.ini  tutorial.html
.github/workflows/: python-package.yml
_modules/: index.html
_modules/gemmapy/: gemmapy_api.html
_sources/: index.rst.txt  install.rst.txt  tutorial.rst.txt
docs/: api.rst  conf.py  index.rst  install.rst  tutorial.rst
docs/_build/doctrees/: api.doctree  index.doctree  install.doctree  tutorial.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  searchindex.js  tutorial.html
gemmapy/: __init__.py  _processors.py  _subprocessors.py  _validators.py  gemmapy_api.py  gemmapy_tables.py  processors.py  subprocessors.py  validators.py
gemmapy/sdk/: __init__.py  api_client.py  configuration.py  rest.py
gemmapy/sdk/api/: __init__.py  default_api.py
gemmapy/sdk/models/: __init__.py  alternate_name.py  analysis.py  analysis_ref.py  annotation_search_result_value_object.py  annotation_value_object.py  annotation_with_usage_statistics_value_object.py  (+322 more)
gemmapy/sdk2/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
sdk-gen/: README.rst  generate-sdk.sh  generate-sdk2.sh  openapi.yaml
sdk-gen/templ/: __init__api.mustache  __init__model.mustache  __init__package.mustache  api.mustache  api_client.mustache  configuration.mustache
tests/: test_all.py  test_basic.py  test_one.py  test_tut.py
(+449 files in other folders)
