[metadata]
name = gemmapy
version = 2.0.3
description = a Python Wrapper for the Gemma API
long_description = file: README.rst
keywords = gemma, bioinformatics

[options]
packages = find:
python_requires = >=3.9
install_requires =
    certifi >= 14.05.14
    six >= 1.10
    python_dateutil >= 2.5.3
    setuptools >= 21.0.0
    urllib3 >= 1.15.1
    pandas
    numpy
    anndata
    typing

#[options.packages.find]
#exclude = test*; test.*
